--- a/Infomat/Clinica/templates/Clinica/news.html
+++ b/Infomat/Clinica/templates/Clinica/news.html
@@ -1,10 +1,13 @@
 {% extends 'Clinica/base.html' %}
 
 {% block header %}
-<title>Контакты</title>
+<title>Новости</title>
 {% endblock header %}
 
 {% block body %}
-    <h2>Contact</h2>
-    <p>other text</p>
+<div>
+    <p>новости </p>
+</div>
+
+
 {% endblock body %}
