--- a/Infomat/Clinica/templates/Clinica/contact.html
+++ b/Infomat/Clinica/templates/Clinica/contact.html
@@ -5,6 +5,41 @@
 {% endblock header %}
 
 {% block body %}
-    <h2>Contact</h2>
-    <p>other text</p>
+
+<div class="page">
+    <h1 style="text-align:center">БЮДЖЕТНОЕ УЧРЕЖДЕНИЕ ЗДРАВООХРАНЕНИЯ ВОРОНЕЖСКОЙ ОБЛАСТИ </h1>
+    <h1 style="text-align:center">"РЕПЬЕВСКАЯ РАЙОННАЯ БОЛЬНИЦА"</h1>
+
+    <table   style="width:100%;">
+        <td style="width:55%">
+            <ul>
+            <li>Руководитель:	главный врач Акульшина Надежда Сергеевна</li>
+            <li>ИНН / КПП:	3626000933 / 362601001</li>
+            <li>ОКПО: 01922181</li>
+            <li>ОГРН: 1023601034027</li>
+            </ul>
+        </td>
+        <td >
+            <ul>
+            <li>396370, ВОРОНЕЖСКАЯ ОБЛАСТЬ, Р-Н РЕПЬЁВСКИЙ, С РЕПЬЁВКА, УЛ. МИРА, Д.35</li>
+            <li>Факс: +7 (47374) 2-11-55</li>
+            <li>Телефон: +7 (47374) 2-11-45</li>
+            <li>E-mail: crb@rep.vrn.ru</li>
+        </ul>
+        </td>
+    </table>
+</div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 {% endblock body %}
